Remove float from share widget to ensure correct alignment with text

--- a/torchbox/static/torchbox/css/medium.css
+++ b/torchbox/static/torchbox/css/medium.css
@@ -847,9 +847,7 @@
 
     .share {
         margin-left: 0.5em;
-        float: left;
     }
-
 
     .grid li {
         float: left;
